--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@ terraform.rc
 
 # Ignore tfplan
 tfplan
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
