--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,18 @@ on:
       - 'modules/**'
       - '**.tf'
 jobs:
-  # terraform_plan:
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Terraform_Plan
-  #     run: make run_plan       
-
+  image_build:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Container_Build
+      run: make build
+    # - name: Container_Push
+    #   run: make push
   # terraform_apply:
   #   environment:
   #     name: approval
