--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
       - 'Makefile'
       - '.github/workflows/**'
       - '*dockerfile'
+      - 'app/dockerfile'
       - 'modules/**'
       - '**.tf'
 jobs:
@@ -18,28 +19,12 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
+      AWS_ACCOUNT_NUMBER:  ${{ secrets.AWS_ACCOUNT_NUMBER }} 
+      REGION:  ${{ secrets.REGION }} 
+      REPO_PARAMETER_NAME:  ${{ secrets.REPO_PARAMETER_NAME }}    
     steps:
     - uses: actions/checkout@v2
     - name: Container_Build
       run: make build
-    # - name: Container_Push
-    #   run: make push
-  # terraform_apply:
-  #   environment:
-  #     name: approval
-  #   needs: terraform_plan
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Terraform_Plan
-  #     run: make run_plan
-  #   - name: Terraform_Apply
-  #     run: make run_apply  
-
-
-
-
+    - name: Container_Push
+      run: make push
